Cores e Efeitos - Projeto - Post-it Fim

--- a/22_Cores_e_efeitos/post-it.html
+++ b/22_Cores_e_efeitos/post-it.html
@@ -9,12 +9,56 @@
 
     <h1>Post-it</h1>
 
-    <div>
+    <section class="cards-container">
+
         <article class="card">
-            <h2>Lorem, ipsum dolor.</h2>
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
         </article>
-    </div>
+
+        <article class="card">
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
+        </article>
+
+        <article class="card">
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
+        </article>
+
+        <article class="card">
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
+        </article>
+
+        <article class="card">
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
+        </article>
+
+        <article class="card">
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
+        </article>
+
+        <article class="card">
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
+        </article>
+
+        <article class="card">
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
+        </article>
+
+        <article class="card">
+            <h2 class="card_title">Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, voluptatem. Odio nobis minima laboriosam laborum quaerat excepturi iure in natus? Inventore iste tempore debitis accusamus?</p>
+        </article>
+
+
+    </section>
+    
     
 </body>
 </html>
