Responsividade - Media Queries

--- a/23_Responsividade/01_type_media.html
+++ b/23_Responsividade/01_type_media.html
@@ -5,7 +5,7 @@
     
     <title>Media Types</title>
     <!-- Para informar que o estilo é para impressão, ao informar o css, colocar o atributo 'media="print"' -->
-    <link rel="stylesheet" href="styles/type_media_print.css" media="print">
+    <link rel="stylesheet" href="styles/01_type_media_print.css" media="print">
 
     <style>
 
@@ -15,6 +15,13 @@
             color: blue;
             font-family: sans-serif;
         }
+
+        @media screen{
+            body{
+                background-color: #ccc;
+            }
+        }
+
     /* } */
     
         /* @media print{
