Responsividade - Media Queries - Metatag viewport

--- a/23_Responsividade/02_media_queries.html
+++ b/23_Responsividade/02_media_queries.html
@@ -2,16 +2,24 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <!-- É importante ter a metatag 'viewport', para a responsividade funcionar corretamente em dispositvos diferentes. -->
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="styles/02_media_queries.css">
 </head>
 <body>
-
+    <!-- Exemplo de responsividade -->
     <h1 class="label">Media Query:
 
         <span id="res1"> &gt; 960px</span>
         <span id="res2"> &gt; 481px e &lt; 959px</span>
         <span id="res3"> &lt; 480px ...</span>
     </h1>
+
+    <a href="https://google.com">Google</a>
+
+    <div class="teste">
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
 </body>
 </html>
