Responsividade - Containers Responsivos pt2

--- a/23_Responsividade/05_container.html
+++ b/23_Responsividade/05_container.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="card_body">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit accusamus eaque omnis molestiae, itaque quaerat.</p>
-                        <a href="#" class="card_cta">Saiba mais</a>
+                        <a href="#" class="card_btn">Saiba mais</a>
                     </div>
                 </article>
             </div>
