--- a/23_Responsividade/05_container.html
+++ b/23_Responsividade/05_container.html
@@ -20,6 +20,30 @@
                     </div>
                 </article>
             </div>
+
+            <div class="card_wrapper">
+                <article class="card">
+                    <div class="card_header">
+                        <img src="imagens/card_03.jpg" alt="Imagem aleatória">
+                    </div>
+                    <div class="card_body">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit accusamus eaque omnis molestiae, itaque quaerat.</p>
+                        <a href="#" class="card_btn">Saiba mais</a>
+                    </div>
+                </article>
+            </div>
+
+            <div class="card_wrapper">
+                <article class="card">
+                    <div class="card_header">
+                        <img src="imagens/card_05.jpg" alt="Imagem aleatória">
+                    </div>
+                    <div class="card_body">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit accusamus eaque omnis molestiae, itaque quaerat.</p>
+                        <a href="#" class="card_btn">Saiba mais</a>
+                    </div>
+                </article>
+            </div>
         </div>
     </main>
 </body>
