Projeto - Range Hotels - Pt2 (InClass)

--- a/24_Projeto_Range_Hotels/index.html
+++ b/24_Projeto_Range_Hotels/index.html
@@ -9,19 +9,25 @@
 </head>
 <body>
     
-    <main class="main_header">
-        <header class="header_top">
-            <img class="header_logo" src="images/logo_mob.png" alt="LOgomarca Range Hotels">
-            <nav class="header_nav">
+        <header class="top_header maxWidth">
+            <img class="top_header_logo" src="images/logo_mob.svg" alt="Logomarca Range Hotels">
+            <nav class="top_header_nav">
                 <ul>
-                    <li>Home</li>
-                    <li>Hospendagem</li>
-                    <li>Promoções</li>
-                    <li>Localização</li>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Hospendagem</a>
+                    </li>
+                    <li>
+                        <a href="#">Promoções</a>
+                    </li>
+                    <li>
+                        <a href="#">Localização</a>
+                    </li>
                 </ul>
             </nav>
         </header>
-    </main>
 
 </body>
 </html>
