Projeto - Range Hotels - MD Content - Pt6 (InClass)

--- a/24_Projeto_Range_Hotels/index.html
+++ b/24_Projeto_Range_Hotels/index.html
@@ -48,5 +48,43 @@
                 <a href="#" class="heroBanner_btn">Saiba mais</a>
             </div>
         </section>
+
+        <section class="middleContent">
+            <div class="maxWidth row">
+
+                <article class="col col-sm-12 col-md-6 col-xl-3">
+                    <a href="#">
+                        <span>icon</span>
+                        <h3 class="middleContent_title">Hospedagem</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
+                    </a>
+                </article>
+
+                <article class="col col-sm-12 col-md-6 col-xl-3">
+                    <a href="#">
+                        <span>icon</span>
+                        <h3 class="middleContent_title">Localização</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
+                    </a>
+                </article>
+
+                <article class="col col-sm-12 col-md-6 col-xl-3">
+                    <a href="#">
+                        <span>icon</span>
+                        <h3 class="middleContent_title">Restaurantes</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
+                    </a>
+                </article>
+
+                <article class="col col-sm-12 col-md-6 col-xl-3">
+                    <a href="#">
+                        <span>icon</span>
+                        <h3 class="middleContent_title">Fale conosco</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
+                    </a>
+                </article>
+
+            </div>
+        </section>
 </body>
 </html>
