--- a/24_Projeto_Range_Hotels/index.html
+++ b/24_Projeto_Range_Hotels/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/icomoon-icon/style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -54,7 +55,7 @@
 
                 <article class="col col-sm-12 col-md-6 col-xl-3">
                     <a href="#">
-                        <span>icon</span>
+                        <span class="icon-home3"></span>
                         <h3 class="middleContent_title">Hospedagem</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
                     </a>
@@ -62,7 +63,7 @@
 
                 <article class="col col-sm-12 col-md-6 col-xl-3">
                     <a href="#">
-                        <span>icon</span>
+                        <span class="icon-map"></span>
                         <h3 class="middleContent_title">Localização</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
                     </a>
@@ -70,7 +71,7 @@
 
                 <article class="col col-sm-12 col-md-6 col-xl-3">
                     <a href="#">
-                        <span>icon</span>
+                        <span class="icon-spoon-knife"></span>
                         <h3 class="middleContent_title">Restaurantes</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
                     </a>
@@ -78,7 +79,7 @@
 
                 <article class="col col-sm-12 col-md-6 col-xl-3">
                     <a href="#">
-                        <span>icon</span>
+                        <span class="icon-bubbles4"></span>
                         <h3 class="middleContent_title">Fale conosco</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
                     </a>
