Projeto - Range Hotels - Main Content - Pt9 (InClass)

--- a/24_Projeto_Range_Hotels/index.html
+++ b/24_Projeto_Range_Hotels/index.html
@@ -34,6 +34,7 @@
             </nav>
         </header>
 
+
         <section class="heroBanner">
             <div class="maxWidth">
                 <div class="heroBanner_iconPlay">
@@ -87,5 +88,51 @@
 
             </div>
         </section>
+
+        <section class="mainContent">
+            <div class="maxWidth row">
+                <article class="mainContent_article col-sm-12 col-xl-6">
+                    <div class="mainContent_img">
+                        <img src="images/hostel.png" alt="Hostel">
+                    </div>
+                    <div class="mainContent_text">
+                        <h3 class="mainContent_title">Hostel</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa.</p>
+                    </div>
+                </article>
+
+                <article class="mainContent_article col-sm-12 col-xl-6">
+                    <div class="mainContent_img">
+                        <img src="images/chale.png" alt="Chalé">
+                    </div>
+                    <div class="mainContent_text">
+                        <h3 class="mainContent_title">Chalés</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa.</p>
+                    </div>
+                </article>
+
+                <article class="mainContent_article col-sm-12 col-xl-6">
+                    <div class="mainContent_img">
+                        <img src="images/familiar.png" alt="Familiar">
+                    </div>
+                    <div class="mainContent_text">
+                        <h3 class="mainContent_title">Familiar</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa.</p>
+                    </div>
+                </article>
+
+                <article class="mainContent_article col-sm-12 col-xl-6">
+                    <div class="mainContent_img">
+                        <img src="images/romantico.png" alt="Romântico">
+                    </div>
+                    <div class="mainContent_text">
+                        <h3 class="mainContent_title">Romântico</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa.</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+
 </body>
 </html>
