Projeto - Range Hotels - Main Content - Pt12 - (inclass)

--- a/24_Projeto_Range_Hotels/index.html
+++ b/24_Projeto_Range_Hotels/index.html
@@ -34,7 +34,7 @@
             </nav>
         </header>
 
-
+    <main>
         <section class="heroBanner">
             <div class="maxWidth">
                 <div class="heroBanner_iconPlay">
@@ -58,7 +58,7 @@
                     <a href="#">
                         <span class="icon-home3"></span>
                         <h3 class="middleContent_title">Hospedagem</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae. - Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     </a>
                 </article>
 
@@ -66,7 +66,7 @@
                     <a href="#">
                         <span class="icon-map"></span>
                         <h3 class="middleContent_title">Localização</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae. - Lorem ipsum dolor sit.</p>
                     </a>
                 </article>
 
@@ -82,7 +82,7 @@
                     <a href="#">
                         <span class="icon-bubbles4"></span>
                         <h3 class="middleContent_title">Fale conosco</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae deserunt asperiores in? Distinctio voluptatibus fuga quis rerum quos nulla quae. - Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero nesciunt a minima!</p>
                     </a>
                 </article>
 
@@ -98,7 +98,7 @@
                         </div>
                         <div class="mainContent_text">
                             <h3 class="mainContent_title">Hostel</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa. - Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero molestiae suscipit, neque dicta eum pariatur?</p>
                         </div>
                     </div>
                 </article>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="mainContent_text">
                             <h3 class="mainContent_title">Chalés</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa. - Lorem ipsum dolor sit amet.</p>
                         </div>
                     </div>
                 </article>
@@ -134,13 +134,19 @@
                         </div>
                         <div class="mainContent_text">
                             <h3 class="mainContent_title">Romântico</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id molestias atque nam, ad ipsa. - Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, quas.</p>
                         </div>
                     </div>
                 </article>
             </div>
         </section>
+    </main>
 
+        <footer class="footer">
+            <p>Copyright The Range</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore ullam magni sequi aperiam, neque iusto amet, nulla corrupti ex nostrum adipisci qui sint magnam quo.</p>
+        </footer>
+    
 
 </body>
 </html>
