CSS Grid - Desafio Calculadora - Parte 3

--- a/27_CSS_Grid/16_desafio_calculadora.html
+++ b/27_CSS_Grid/16_desafio_calculadora.html
@@ -6,14 +6,23 @@
     <title>CSS Grid - Desafio Calculadora</title>
 
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+            list-style: none;            ;
+        }
+
         body{
-            min-height: 100vh;
+            height: 100vh;
             background-image: linear-gradient(#5656ff, #0f0f8b );
             color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .gridContainer{
-            margin: auto;
+            /* margin: auto; */
             background-color: blueviolet;
             width: 250px ;
             padding: 20px;
