--- a/27_CSS_Grid/16_desafio_calculadora.html
+++ b/27_CSS_Grid/16_desafio_calculadora.html
@@ -61,7 +61,7 @@
         }
 
         .soma{
-            grid-column: 4;
+            /* grid-column: 4; */
             grid-row: span 2;
         }
 
