Projeto - Dashboard - Parte 3 - Fim Html

--- a/28_Projeto_dashboard/index.html
+++ b/28_Projeto_dashboard/index.html
@@ -165,9 +165,41 @@
             </div>
             <div>Axilo Iphono</div>
             <div>Front-end</div>
-            
         </section>
     </header>
+
+    <main>
+        <section class="summary">
+            <article>
+                <span class="description">Announced Today</span>
+                <span class="number">235600</span>
+            </article>
+
+            <article>
+                <span class="description">Prepared Today</span>
+                <span class="number">16738</span>
+            </article>
+
+            <article>
+                <span class="description">Sorted Today</span>
+                <span class="number">286</span>
+            </article>
+
+            <a href="#" class="btn">See more</a>
+        </section>
+
+        <figure>
+            <img src="imagens/chart1.png" alt="Gráfico 1">
+        </figure>
+
+        <figure>
+            <img src="imagens/chart2.png" alt="Gráfico 2">
+        </figure>
+
+        <figure>
+            <img src="imagens/chart3.png" alt="Gráfico 3">
+        </figure>
+    </main>
 
 
 
