Projeto - Dashboard - Parte 5 - CSS Parte2

--- a/28_Projeto_dashboard/index.html
+++ b/28_Projeto_dashboard/index.html
@@ -12,10 +12,10 @@
 <body>
 
     <nav class="mainNav">
-        <a href="index.html" class="mainNav-linkLogo">Dashboard</a>
+        <a href="index.html" class="mainNav_linkLogo">Dashboard</a>
 
-        <div class="menus">
-            <ul class="menu">
+        <div class="mainNav_menus">
+            <ul class="mainNav_menu">
                 <li>
                     <a href="#">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -105,7 +105,7 @@
             </ul>
 
 
-            <ul class="menu">
+            <ul class="mainNav_menu">
                 <li>
                     <a href="#">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -161,10 +161,10 @@
 
         <section class="perfil">
             <div class="perfil_thumb">
-                <img src="imagens/perfil.png" alt="Axilo Iphono">
+                <!-- <img src="imagens/perfil.png" alt="Axilo Iphono"> -->
             </div>
-            <div>Axilo Iphono</div>
-            <div>Front-end</div>
+            <div class="perfil_name">Axilo Iphono</div>
+            <div class="perfil_rule">Front-end</div>
         </section>
     </header>
 
