--- a/28_Projeto_dashboard/index.html
+++ b/28_Projeto_dashboard/index.html
@@ -161,10 +161,12 @@
 
         <section class="perfil">
             <div class="perfil_thumb">
-                <!-- <img src="imagens/perfil.png" alt="Axilo Iphono"> -->
+                <img src="imagens/perfil.png" alt="Axilo Iphono">
             </div>
-            <div class="perfil_name">Axilo Iphono</div>
-            <div class="perfil_rule">Front-end</div>
+            <div>
+                <div class="perfil_name">Axilo Iphono</div>
+                <div class="perfil_rule">Front-end</div>
+            </div>
         </section>
     </header>
 
