Projeto - Dashboard - Parte 7 - CSS Parte4

--- a/28_Projeto_dashboard/index.html
+++ b/28_Projeto_dashboard/index.html
@@ -177,10 +177,14 @@
                 <span class="number">235600</span>
             </article>
 
+            <div class="separeted"></div>
+
             <article>
                 <span class="description">Prepared Today</span>
                 <span class="number">16738</span>
             </article>
+
+            <div class="separeted"></div>
 
             <article>
                 <span class="description">Sorted Today</span>
@@ -194,11 +198,11 @@
             <img src="imagens/chart1.png" alt="Gráfico 1">
         </figure>
 
-        <figure>
+        <figure class="grid-half">
             <img src="imagens/chart2.png" alt="Gráfico 2">
         </figure>
 
-        <figure>
+        <figure class="grid-half">
             <img src="imagens/chart3.png" alt="Gráfico 3">
         </figure>
     </main>
