Projeto - Dashboard - Refactoring

--- a/28_Projeto_dashboard/index.html
+++ b/28_Projeto_dashboard/index.html
@@ -173,25 +173,25 @@
     <main>
         <section class="summary">
             <article>
-                <span class="description">Announced Today</span>
-                <span class="number">235600</span>
+                <span class="summary_description">Announced Today</span>
+                <span class="summary_number">235600</span>
             </article>
 
-            <div class="separeted"></div>
+            <div class="summary_separeted"></div>
 
             <article>
-                <span class="description">Prepared Today</span>
-                <span class="number">16738</span>
+                <span class="summary_description">Prepared Today</span>
+                <span class="summary_number">16738</span>
             </article>
 
-            <div class="separeted"></div>
+            <div class="summary_separeted"></div>
 
             <article>
-                <span class="description">Sorted Today</span>
-                <span class="number">286</span>
+                <span class="summary_description">Sorted Today</span>
+                <span class="summary_number">286</span>
             </article>
 
-            <a href="#" class="btn">See more</a>
+            <a href="#" class="btn summary_btn">See more</a>
         </section>
 
         <figure>
