Projeto SerDigital - Parte 3 - Media Queries

--- a/29_Projeto_SerDigital/index.html
+++ b/29_Projeto_SerDigital/index.html
@@ -29,14 +29,14 @@
 
         <!-- Hero Banner -->
         <section class="hero row">
-            <div class="content sm-12">
+            <div class="content sm-12 lg-7">
                 <header>
                     <h1 class="hero_title">Produtos, marcas &amp; experiências Digitais</h1>
                     <p>Somos um time 100% digital construindo produtos 100% digitais</p>
                 </header>
                 <a href="contato.html" class="btn">entre em contato</a>
             </div>
-            <div class="imagem sm-12">
+            <div class="imagem sm-12 lg-5">
                 <img src="imagens/online-business-marketing.png" alt="" class="hero_image">
             </div>
         </section>
@@ -54,7 +54,7 @@
 
         <!-- Branding section -->
         <section class="branding row" id="sobre">
-            <article class="sm-12">
+            <article class="sm-12 md-7-12 lg-8-12">
                 <h2>Branding &amp; Design system</h2>
                 <p>Normalmente usado em indústrias gráficas e produtoras para pré-visualização de designs, layouts e
                     mockups</p>
@@ -62,14 +62,14 @@
                     <img src="imagens/Arrow.svg" alt=""
                         aria-hidden="true"></a>
             </article>
-            <div class="imagem" sm-12>
+            <div class="imagem sm-12 md-1-6 lg-1-5">
                 <img src="imagens/business-deal.png" alt="">
             </div>
         </section>
 
         <!-- Results section -->
         <section class="results row">
-            <article class="sm-12">
+            <article class="sm-12 md-6 lg-5">
                 <h2>Análise de resultados</h2>
                 <p>Todo projeto de comunicação precisa de um objetivo bem definido. Ajudamos no acompanhamento dos
                     resultados obtidos.</p>
@@ -77,7 +77,7 @@
                     <img src="imagens/Arrow.svg" alt=""
                         aria-hidden="true"></a>
             </article>
-            <div class="imagem sm-12">
+            <div class="imagem sm-12 md-6 lg-8-12">
                 <img src="imagens/businessman-checking-financial-report.png" alt="">
             </div>
         </section>
