--- a/29_Projeto_SerDigital/index.html
+++ b/29_Projeto_SerDigital/index.html
@@ -134,8 +134,11 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer row">
-        <section class="content-wrapper-center sm-12 md-9 lg-6">
+
+    
+    <footer class="footer">
+        <div class="content-wrapper-center row">
+        <section class="sm-12 md-9 lg-6">
             <header><a href="index.html" class="logo">Ser Digital</a>
                 <p>produtos, marcas &amp; experiências Digitais</p>
             </header>
@@ -150,7 +153,7 @@
             </ul>
         </section>
 
-        <section class="content-wrapper-center sm-12 md-3 lg-3">
+        <section class="sm-12 md-3 lg-3">
             <header>
                 <h3>Company</h3>
             </header>
@@ -162,7 +165,7 @@
             </ul>
         </section>
 
-        <section class="content-wrapper-center sm-12 lg-3">
+        <section class="sm-12 lg-3">
             <header>
                 <h3>Contato</h3>
             </header>
@@ -173,15 +176,16 @@
             </ul>
         </section>
 
-        <section class="copyright content-wrapper-center sm-12">
+        <section class="copyright sm-12">
             &copy; Matheus - @matheusdias20 <wbr>
 Todos os direitos reservados <wbr>
 https://www.figma.com/@matheusdias20 <wbr>
 https://github.com/matheusdias20 <wbr>
         </section>
 
-
+    </div>
     </footer>
+
 </body>
 
 </html>
