--- a/29_Projeto_SerDigital/index.html
+++ b/29_Projeto_SerDigital/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -151,10 +152,10 @@
 
 
             <ul class="icons">
-                <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                <li><a href="#" class="icon brands alt fa-youtube-f"><span class="label">Youtube</span></a></li>
+                <li><a href="#"><i area-hidden="true" class="fa-solid fa-hashtag"></i><span class="label hide">Instagram</span></a></li>
+                <li><a href="#"><i area-hidden="true" class="fa-brands fa-x-twitter"></i><span class="label hide">Twitter</span></a></li>
+                <li><a href="#"><i area-hidden="true" class="fa-brands fa-linkedin-in"></i><span class="label hide">LinkedIn</span></a></li>
+                <li><a href="#"><i area-hidden="true" class="fa-brands fa-youtube"></i><span class="label hide">Youtube</span></a></li>
 
             </ul>
         </section>
