--- a/31_Transformacao_3D/Cubo_3D/index.html
+++ b/31_Transformacao_3D/Cubo_3D/index.html
@@ -7,6 +7,38 @@
     <title>Cubo 3D</title>
 </head>
 <body>
+
+    <div class="controls">
+        <div class="x-axis"> Eixo X
+            <label> <input type="radio" name="x" value="0" checked>0&deg</label>
+            <label> <input type="radio" name="x" value="15">15&deg</label>
+            <label> <input type="radio" name="x" value="45">45&deg</label>
+            <label> <input type="radio" name="x" value="90">90&deg</label>
+            <label> <input type="radio" name="x" value="135">135&deg</label>
+            <label> <input type="radio" name="x" value="180">180&deg</label>
+            <label> <input type="radio" name="x" value="270">270&deg</label>
+        </div>
+
+        <div class="y-axis"> Eixo Y
+            <label> <input type="radio" name="y" value="0" checked>0&deg</label>
+            <label> <input type="radio" name="y" value="15">15&deg</label>
+            <label> <input type="radio" name="y" value="45">45&deg</label>
+            <label> <input type="radio" name="y" value="90">90&deg</label>
+            <label> <input type="radio" name="y" value="135">135&deg</label>
+            <label> <input type="radio" name="y" value="180">180&deg</label>
+            <label> <input type="radio" name="y" value="270">270&deg</label>
+        </div>
+
+        <div class="z-axis"> Eixo Z
+            <label> <input type="radio" name="z" value="0" checked>0&deg</label>
+            <label> <input type="radio" name="z" value="15">15&deg</label>
+            <label> <input type="radio" name="z" value="45">45&deg</label>
+            <label> <input type="radio" name="z" value="90">90&deg</label>
+            <label> <input type="radio" name="z" value="135">135&deg</label>
+            <label> <input type="radio" name="z" value="180">180&deg</label>
+            <label> <input type="radio" name="z" value="270">270&deg</label>
+        </div>
+    </div>
     <div class="cena">
         <div class="cubo">
             <div class="face face-1">1</div>
