Logica de Programacao - Aula 1 - Inicio Variaveis - pt2 (solo)

--- a/32_Logica_de_Programacao/00_base.html
+++ b/32_Logica_de_Programacao/00_base.html
@@ -6,9 +6,11 @@
     <title>Lógica de Programação - </title>
 </head>
 <body>
-    
-</body>
+        <h1>Lógica de Programação - Variaveis</h1>
+
     <script>
         
     </script>
+</body>
+   
 </html>
