--- a/32_Logica_de_Programacao/01_variaveis.html
+++ b/32_Logica_de_Programacao/01_variaveis.html
@@ -16,7 +16,15 @@
         var nome = prompt("Qual é o seu nome?");
         alert("Bem-vindo, " + nome + "!")
 
-        var endereco = "";
+        alert("Então "+ nome +", vamos pedir algumas informações para você agora!")
+
+        var endereco = prompt("Qual seu endereço?");
+
+        var idade = prompt("Qual a sua idade?")
+
+        var preferido = prompt("Qual seu filme predileto?")
+
+        alert("Muito bem " + nome + " sua idade é " + idade +", muito legal! Registramos por aqui que reside em " + endereco + " e que gosta muito de assistir o filme " + preferido +", até uma próxima!")
     </script>
 </body>
 </html>
