Logica de Programacao - Aula 2 - Conversao entre tipos

--- a/32_Logica_de_Programacao/01_variaveis.html
+++ b/32_Logica_de_Programacao/01_variaveis.html
@@ -25,6 +25,12 @@
         var preferido = prompt("Qual seu filme predileto?")
 
         alert("Muito bem " + nome + " sua idade é " + idade +", muito legal! Registramos por aqui que reside em " + endereco + " e que gosta muito de assistir o filme " + preferido +", até uma próxima!")
+    
+        var nome = prompt ("Qual é o seu nome?");
+        alert("Bem-vindo, " + nome);
+
+        var endereco = 1.2; // numero decimal / numero real
+        var estaGravido = false; //boolean
     </script>
 </body>
 </html>
