Logica de Programacao - Operadores de comparacao

--- a/32_Logica_de_Programacao/01_variaveis.html
+++ b/32_Logica_de_Programacao/01_variaveis.html
@@ -29,8 +29,8 @@
         var nome = prompt ("Qual é o seu nome?");
         alert("Bem-vindo, " + nome);
 
-        var endereco = 1.2; // numero decimal / numero real
-        var estaGravido = false; //boolean
+        // var endereco = 1.2; // numero decimal / numero real
+        // var estaGravido = false; //boolean
     </script>
 </body>
 </html>
