Logica de Programacao - Operadores de comparacao pt2

--- a/32_Logica_de_Programacao/05_operadores_comparacao.html
+++ b/32_Logica_de_Programacao/05_operadores_comparacao.html
@@ -10,15 +10,26 @@
 
     <script>
         /* 
-        == - Igualdade (valor)
-        != - Diferente (valor)
-        === - Igualdade (valor e tipo)
-        !== - Diferente (valor e tipo)
-        > - Maior
-        >= - Maior ou igual
-        < - Menor
-        <= Menor ou igual
+            == - Igualdade (valor)
+            != - Diferente (valor)
+            === - Igualdade (valor e tipo)
+            !== - Diferente (valor e tipo)
+            > - Maior
+            >= - Maior ou igual
+            < - Menor
+            <= Menor ou igual
         */
+
+    let n1 = prompt("Digite um número");
+    n1 = parseFloat(n1);
+
+        // Forma resumida do exemplo acima
+    let n2 = parseFloat(prompt("Digite outro número"));
+
+    let media = (n1 + n2) / 2;
+
+    alert(media > 5);
+
 
         
 
