Logica de Programacao - Exercicio - Jogo de decisoes

--- a/32_Logica_de_Programacao/06_controle_decisoes.html
+++ b/32_Logica_de_Programacao/06_controle_decisoes.html
@@ -29,7 +29,7 @@
 
         // Operador ternário:
         // Condições ? executa se for verdadeiro : executa se falso
-        media > 5 ? alert("Parabéns, você foi aprovado!") : alert("Desculpe, mas você não foi aprovado! Se esforce mais!")
+        media > 5 ? alert("Parabéns, você foi aprovado!") : alert("Desculpe, mas você não foi aprovado! Se esforce mais!");
     </script>
 </body>
    
