Logica de Programacao - Operadores Logicos

--- a/32_Logica_de_Programacao/08.1_operadores_logicos.html
+++ b/32_Logica_de_Programacao/08.1_operadores_logicos.html
@@ -17,7 +17,7 @@
 
         let mediaaluno = (n1 + n2) / 2;
 
-        if(mediaaluno < 5 || n1 === 0 || n2 === 0){
+        if(mediaaluno <=5 || n1 === 0 || n2 === 0){
             alert("O aluno foi reprovado!");
         }
         else{
