Logica de Programacao - Exercicio Loop com modulo - inclass pt 2

--- a/32_Logica_de_Programacao/10_repetindo_acoes.html
+++ b/32_Logica_de_Programacao/10_repetindo_acoes.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lógica de Programação - </title>
+    <title>Lógica de Programação - Repetindo Açoes</title>
 </head>
 <body>
-        <h1>Lógica de Programação - Variaveis</h1>
+        <h1>Lógica de Programação - Repetindo Açoes</h1>
 
     <script>
         let numero = prompt("digite um número");
