--- a/32_Logica_de_Programacao/10.1_repeticao_exercicio.html
+++ b/32_Logica_de_Programacao/10.1_repeticao_exercicio.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lógica de Programação - </title>
+    <title>Lógica de Programação - Repetindo Açoes - Exercicio</title>
 </head>
 <body>
-        <h1>Lógica de Programação - Variaveis</h1>
+        <h1>Lógica de Programação - Repetindo Açoes  - Exercicio</h1>
 
     <script>
         let numero = prompt("digite um número");
@@ -14,7 +14,7 @@
 
         // Loop com 'for'
 
-        for(let i = 1 ; i <= 100 ; i++){
+        for(let i = 0 ; i <= 100 ; i++){
 
         let resultado = numero * i;
 
@@ -24,7 +24,7 @@
 
         // % módulo retorna o resto da divisão exata
 
-        if((resultado % 10) === 0){
+        if((resultado % 10) === 0 && resultado > 0){
             document.write("<hr>");
         }
         }
