Logica de Programacao - Eventos User

--- a/32_Logica_de_Programacao/11_selecao_html.html
+++ b/32_Logica_de_Programacao/11_selecao_html.html
@@ -14,7 +14,7 @@
             // Problema: 
         // Pedir para  user digitar um número
         // Mostrar a tabuada de 1 a 1000
-        // Dar a possibilidade de mudar o número
+        // Dar a possibilidade de mudar o número, e limpar tudo e mostrar outra.
         
         let output = document.querySelector('#output');
 
